# Qwen3-TTS-Rust

./: .gitignore  Cargo.toml  README.md  README_DE.md  README_EN.md  README_ES.md  README_FR.md  README_IT.md  README_JA.md  README_KO.md  README_PT.md  README_RU.md  run.ps1
.github/workflows/: release.yml
assets/: convert_assets.py  download_dlls.ps1  download_models.py
assets/scripts/: convert_talker_gguf.py  export_config.py
assets/scripts/qwen3_tts_gguf/: codec_export.py  config.py  engine.py  prompt_builder.py  stream.py
assets/scripts/qwen3_tts_gguf/workers/: decoder.py
docs/: README_DE.md  README_EN.md  README_ES.md  README_FR.md  README_IT.md  README_JA.md  README_KO.md  README_PT.md  README_RU.md
examples/: check_tokenizer.rs  debug_happy.rs  make_voice.rs  qwen3-tts.rs
speakers/: aiden.json  dylan.json  eric.json  index.json  ono_anna.json  ryan.json  serena.json  sohee.json  uncle_fu.json  vivian.json
src/: assets_manager.rs  download.rs  lib.rs
src/models/: mod.rs  onnx.rs  onnx_runtime.rs
src/models/llama/: mod.rs
src/tts/: engine.rs  prompt.rs
src/utils/: cache.rs  config.rs  mod.rs  stream.rs  tokenizer.rs  voice_file.rs
