[package]
name = "qwen3-tts"
version = "0.1.4"
edition = "2024"
description = "Rust implementation of Qwen3-TTS with ONNX Runtime"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cgisky1980/Qwen3-TTS-Rust"
readme = "README.md"

[lib]
path = "src/lib.rs"


[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
ndarray = "0.17.2"
ndarray-npy = "0.10.0"
rand = "0.10.0"
ort = { git = "https://github.com/pykeio/ort", branch = "main", features = [
    "ndarray",
    "load-dynamic",
    "cuda",
    "directml",
] }
tokenizers = "0.22.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
hound = "3.5.1"
cpal = "0.17.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
libc = "0.2.182"
libloading = "0.9.0"
clap = { version = "4.5.60", features = ["derive"] }
mel_spec = "0.3.4"
rustfft = "6.4.1"
reqwest = { version = "0.13.2", features = ["blocking", "stream"] }
indicatif = "0.18.4"
futures-util = "0.3.32"
zip = "8.1.0"
tar = "0.4.44"
flate2 = "1.1.9"

[features]
cuda = []
vulkan = []


[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = [
    "consoleapi",
    "fileapi",
    "handleapi",
    "winbase",
] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
